HTML Templates and Static 1.0

--- a/templates/register_user.html
+++ b/templates/register_user.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Register</title>
+    <title>User Registration</title>
     <link href="/static/bootstrap.min.css" rel="stylesheet">
 
     <style>
@@ -80,6 +80,16 @@
 
     <div class="container center-box bg-white rounded">
         <header><strong>User Registration</strong></header>
+        {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
+        <div class="flash-messages">
+            {% for category, message in messages %}
+            <div class="alert alert-{{ category }}">
+                {{ message }}
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %} {% endwith %}
+
 
         <form method="POST" action="/register_user">
             {{ form.hidden_tag() }}
