--- a/templates/register_user.html
+++ b/templates/register_user.html
@@ -3,12 +3,37 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Registration</title>
     <link href="/static/bootstrap.min.css" rel="stylesheet">
 
     <style>
+        .header-banner {
+            background-color: #6DBE45;
+            padding: 15px 0;
+            text-align: center;
+        }
+        
+        .footer-banner {
+            background-color: #6DBE45;
+            padding: 10px 0;
+            text-align: center;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+        }
+        
+        .slogan {
+            color: #fff;
+            font-weight: bold;
+            font-size: 1.5em;
+            margin-top: 10px;
+        }
+        
+        .footer-text {
+            color: black;
+        }
+        
         .center-box {
             position: absolute;
             top: 50%;
@@ -32,7 +57,7 @@
         body {
             font-family: 'Open Sans', sans-serif;
             background-color: #d7cece;
-            background-image: url('static/full_image.jpeg');
+            background-image: url('/static/welcome_image_user.jpeg');
             background-repeat: no-repeat;
             background-size: 100%;
         }
@@ -45,38 +70,69 @@
             padding: 10px;
             margin-top: 15px;
             border-radius: 5px;
+            font-weight: 500;
         }
         
         .alert-Email_Exists_Error,
         .alert-User_Danger_Integirty_Error,
         .alert-User_Danger_Statement_Error,
         .alert-User_Danger_Invalid_Request_Error,
-        .alert-User_Danger_Other,
-        .alert-Unauthorized_Admin_Error {
+        .alert-User_Danger_Other {
             background-color: #f44336;
             color: white;
+        }
+        
+        .mt-2 {
+            margin-top: 20px;
         }
         
         input {
             margin-bottom: 10px;
         }
         
-        input[type="submit"] {
-            padding: 5px 15px;
-            background-color: #007BFF;
-            border: none;
-            border-radius: 4px;
-            color: white;
-            cursor: pointer;
+        .btn-link {
+            margin: 10px 0;
+            display: block;
+            text-align: center;
+            padding: 15px;
+            border: 1px solid #ddd;
+            border-radius: 7px;
         }
         
-        input[type="submit"]:hover {
-            background-color: #0056b3;
+        .btn-link:hover {
+            text-decoration: none;
+            background-color: #f5f0ed;
+        }
+        
+        .custom-btn-submit {
+            color: green;
+            border-color: black;
+            transition: background-color 0.2s, color 0.2s;
+        }
+        
+        .custom-btn-submit:hover {
+            background-color: green;
+            color: white;
+        }
+        
+        .custom-btn-back {
+            color: royalblue;
+            border-color: white;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        
+        .custom-btn-back:hover {
+            background-color: royalblue;
+            color: white;
         }
     </style>
 </head>
 
 <body>
+    <div class="header-banner">
+        <h1>E-Bazaar</h1>
+        <p class="slogan">Fresh Finds, One Click Away.</p>
+    </div>
 
     <div class="container center-box bg-white rounded">
         <header><strong>User Registration</strong></header>
@@ -92,13 +148,28 @@
 
 
         <form method="POST" action="/register_user">
-            {{ form.hidden_tag() }}
-            <label for="reg_email">Username:</label> {{ form.reg_user }}
-            <label for="reg_email">Email:</label> {{ form.reg_email }}
-            <label for="reg_email">Password:</label> {{ form.reg_password }} {{ form.reg_sub }}
+            {{ form.hidden_tag() }}<br>
+
+            <label for="reg_user"><strong>Username:</strong></label> {{ form.reg_user }}<br>
+            <label for="reg_email"><strong>Email:</strong></label> {{ form.reg_email }}<br>
+            <label for="reg_password"><strong>Password:</strong></label> {{ form.reg_password }}<br>
+            <div class="mt-2 d-flex justify-content-center">
+                <button type="submit" class="btn custom-btn-submit">Submit</button>
+            </div>
+
+            <div class="mt-2 d-flex justify-content-center">
+                <span>Already have an account? <a href="/login_user">Log In</a></span>
+            </div>
+
+            <div class="mt-2 d-flex justify-content-center">
+                <a href="/" class="btn custom-btn-back">Back</a>
+            </div>
 
         </form>
-        <a href='/login_user'>Already have an Account? Login</a><br><br>
+    </div>
+    <div class="footer-banner">
+        <p>Reach out to us at:</p>
+        <p class="footer-text">Email: 21f1001719@ds.study.iitm.ac.in</p>
     </div>
 </body>
 
