--- a/templates/login_user.html
+++ b/templates/login_user.html
@@ -56,7 +56,7 @@
         body {
             font-family: 'Open Sans', sans-serif;
             background-color: #d7cece;
-            background-image: url('/static/welcome_image_user.jpeg');
+            background-image: url('/static/welcome_image_user.jpg');
             background-repeat: no-repeat;
             background-size: 100%;
         }
