--- a/templates/login_store_manager.html
+++ b/templates/login_store_manager.html
@@ -138,7 +138,7 @@
     </div>
 
     <div class="container center-box bg-white rounded">
-        <header><strong>Store Manager Login</strong></header>
+        <h1>Store Manager Login</h1>
         {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
         <div class="flash-messages">
             {% for category, message in messages %}
