--- a/templates/register_store_manager.html
+++ b/templates/register_store_manager.html
@@ -74,10 +74,10 @@
         }
         
         .alert-Store_Manager_Email_Exists_Error,
-        .alert-User_Danger_Integirty_Error,
-        .alert-User_Danger_Statement_Error,
-        .alert-User_Danger_Invalid_Request_Error,
-        .alert-User_Danger_Other {
+        .alert-Store_Manager_Danger_Integirty_Error,
+        .alert-Store_Manager_Danger_Statement_Error,
+        .alert-Store_Manager_Danger_Invalid_Request_Error,
+        .alert-Store_Manager_Danger_Other {
             background-color: #f44336;
             color: white;
         }
