--- a/templates/register_user.html
+++ b/templates/register_user.html
@@ -172,8 +172,7 @@
         </form>
     </div>
     <div class="footer-banner">
-        <p>Reach out to us at:</p>
-        <p class="footer-text">Email: 21f1001719@ds.study.iitm.ac.in</p>
+        <a class="footer-text" href="mailto:21f1001719@ds.study.iitm.ac.in">Email: 21f1001719@ds.study.iitm.ac.in</a>
     </div>
 </body>
 
