--- a/templates/login_admin.html
+++ b/templates/login_admin.html
@@ -7,6 +7,32 @@
     <title>Admin Login</title>
     <link href="/static/bootstrap.min.css" rel="stylesheet">
     <style>
+        .header-banner {
+            background-color: #6DBE45;
+            padding: 15px 0;
+            text-align: center;
+        }
+        
+        .footer-banner {
+            background-color: #6DBE45;
+            padding: 10px 0;
+            text-align: center;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+        }
+        
+        .slogan {
+            color: #fff;
+            font-weight: bold;
+            font-size: 1.5em;
+            margin-top: 10px;
+        }
+        
+        .footer-text {
+            color: black;
+        }
+        
         .center-box {
             position: absolute;
             top: 50%;
@@ -30,7 +56,7 @@
         body {
             font-family: 'Open Sans', sans-serif;
             background-color: #d7cece;
-            background-image: url('static/full_image.jpeg');
+            background-image: url('/static/welcome_image_admin.jpg');
             background-repeat: no-repeat;
             background-size: 100%;
         }
@@ -52,30 +78,60 @@
             color: white;
         }
         
+        .mt-2 {
+            margin-top: 20px;
+        }
+        
         input {
             margin-bottom: 10px;
         }
         
-        input[type="submit"] {
-            padding: 5px 15px;
-            background-color: #007BFF;
-            border: none;
-            border-radius: 4px;
-            color: white;
-            cursor: pointer;
+        .btn-link {
+            margin: 10px 0;
+            display: block;
+            text-align: center;
+            padding: 15px;
+            border: 1px solid #ddd;
+            border-radius: 7px;
         }
         
-        input[type="submit"]:hover {
-            background-color: #0056b3;
+        .btn-link:hover {
+            text-decoration: none;
+            background-color: #f5f0ed;
+        }
+        
+        .custom-btn-submit {
+            color: green;
+            border-color: black;
+            transition: background-color 0.2s, color 0.2s;
+        }
+        
+        .custom-btn-submit:hover {
+            background-color: green;
+            color: white;
+        }
+        
+        .custom-btn-back {
+            color: royalblue;
+            border-color: white;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        
+        .custom-btn-back:hover {
+            background-color: royalblue;
+            color: white;
         }
     </style>
 </head>
 
 <body>
-    <h1>Admin Login</h1>
+    <div class="header-banner">
+        <h1>E-Bazaar</h1>
+        <p class="slogan">Fresh Finds, One Click Away.</p>
+    </div>
 
     <div class="container center-box bg-white rounded">
-        <header><strong>Admin Login</strong></header>
+        <h1>Admin Login</h1>
         {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
         <div class="flash-messages">
             {% for category, message in messages %}
@@ -87,11 +143,22 @@
         {% endif %} {% endwith %}
 
         <form method="POST" action="/login_admin">
-            {{ form.hidden_tag() }}
-            <label for="log_email">Email:</label> {{ form.log_email }}
-            <label for="log_password">Password:</label> {{ form.log_password }} {{ form.log_sub }}
+            {{ form.hidden_tag() }}<br>
+            <label for="log_email">Email:</label> {{ form.log_email }}<br>
+            <label for="log_password">Password:</label> {{ form.log_password }}
+            <br>
+            <div class="mt-2 d-flex justify-content-center">
+                <button type="submit" class="btn custom-btn-submit">Submit</button>
+            </div>
+            <br>
+            <div class="mt-2 d-flex justify-content-center">
+                <a href="/" class="btn custom-btn-back">Back</a>
+            </div>
 
         </form>
+    </div>
+    <div class="footer-banner">
+        <a class="footer-text" href="mailto:21f1001719@ds.study.iitm.ac.in">Email: 21f1001719@ds.study.iitm.ac.in</a>
     </div>
 </body>
 
