--- a/templates/login_user.html
+++ b/templates/login_user.html
@@ -163,8 +163,7 @@
     </div>
 
     <div class="footer-banner">
-        <p>Reach out to us at:</p>
-        <p class="footer-text">Email: 21f1001719@ds.study.iitm.ac.in</p>
+        <a class="footer-text" href="mailto:21f1001719@ds.study.iitm.ac.in">Email: 21f1001719@ds.study.iitm.ac.in</a>
     </div>
 </body>
 
