--- a/templates/landing_store_manager.html
+++ b/templates/landing_store_manager.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Store Manager Page Page</h1>
     <p>Welcome to store manager landing page</p>
+    <a href='/logout' id="logout-link">Log Out</a>
 </body>
 
 </html>
