--- a/templates/landing_user.html
+++ b/templates/landing_user.html
@@ -10,6 +10,7 @@
 <body>
     <h1>User Page</h1>
     <p>Welcome to user landing page</p>
+    <a href='/logout' id="logout-link">Log Out</a>
 </body>
 
 </html>
