--- a/templates/landing_admin.html
+++ b/templates/landing_admin.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Admin Page</h1>
     <p>Welcome to admin landing page</p>
+    <a href='/logout' id="logout-link">Log Out</a>
 </body>
 
 </html>
