--- a/templates/landing_admin.html
+++ b/templates/landing_admin.html
@@ -11,6 +11,11 @@
     <h1>Admin Page</h1>
     <p>Welcome to admin landing page</p>
     <a href='/logout' id="logout-link">Log Out</a>
+
+    <br>
+    <br>
+
+    <a href="/category/create">Add Category</a>
 </body>
 
 </html>
