--- a/templates/register_user.html
+++ b/templates/register_user.html
@@ -76,8 +76,7 @@
         .alert-User_Email_Exists_Error,
         .alert-User_Danger_Integirty_Error,
         .alert-User_Danger_Statement_Error,
-        .alert-User_Danger_Invalid_Request_Error,
-        .alert-User_Danger_Other {
+        .alert-User_Danger_Invalid_Request_Error {
             background-color: #f44336;
             color: white;
         }
