--- a/templates/delete_category.html
+++ b/templates/delete_category.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Category</title>
+    <title>Confirm Product Deletion</title>
     <link href="/static/bootstrap.min.css" rel="stylesheet">
+
     <style>
         .header-banner {
             background-color: #6DBE45;
@@ -42,7 +43,36 @@
             background-size: 100%;
         }
         
-        .center-form {
+        .success {
+            padding: 10px;
+            margin-top: 15px;
+            border-radius: 5px;
+            font-weight: 500;
+        }
+        
+        .success-Success_Category_Delete {
+            background-color: green;
+            color: white;
+        }
+        
+        .alert {
+            padding: 10px;
+            margin-top: 15px;
+            border-radius: 5px;
+            font-weight: 500;
+        }
+        
+        .alert-Danger_Unauthorized_Confirm_Delete_Category_Access,
+        .alert-Danger_Unauthorized_Delete_Category_Access,
+        .alert-Cat_Delete_Danger_Integirty_Error,
+        .alert-Cat_Delete_Danger_Statement_Error,
+        .alert-Cat_Delete_Danger_Invalid_Request_Error,
+        .alert-Cat_Delete_Danger_Other {
+            background-color: #f44336;
+            color: white;
+        }
+        
+        .center-box {
             position: absolute;
             top: 50%;
             left: 50%;
@@ -64,34 +94,7 @@
             background-color: transparent !important;
         }
         
-        .success {
-            padding: 10px;
-            margin-top: 15px;
-            border-radius: 5px;
-            font-weight: 500;
-        }
-        
-        .success-Success_Category_Create {
-            background-color: green;
-            color: white;
-        }
-        
-        .alert {
-            padding: 10px;
-            margin-top: 15px;
-            border-radius: 5px;
-            font-weight: 500;
-        }
-        
-        .alert-Cat_Create_Danger_Integirty_Error,
-        .alert-Cat_Create_Danger_Statement_Error,
-        .alert-Cat_Create_Danger_Invalid_Request_Error,
-        .alert-Unauthorized_Create_Category_Access {
-            background-color: #f44336;
-            color: white;
-        }
-        
-        #landing-admin {
+        #back-btn {
             position: absolute;
             top: 20px;
             right: 10px;
@@ -102,7 +105,37 @@
             color: rgb(89, 207, 89);
         }
         
+        #back-btn:hover {
+            background-color: #f5f0ed;
+        }
+        
+        #landing-admin {
+            position: absolute;
+            top: 20px;
+            right: 120px;
+            background-color: #ffffff;
+            padding: 5px 10px;
+            border-radius: 7px;
+            text-decoration: none;
+            color: rgb(89, 207, 89);
+        }
+        
         #landing-admin:hover {
+            background-color: #f5f0ed;
+        }
+        
+        #view-catgories {
+            position: absolute;
+            top: 20px;
+            right: 10px;
+            background-color: #ffffff;
+            padding: 5px 10px;
+            border-radius: 7px;
+            text-decoration: none;
+            color: rgb(89, 207, 89);
+        }
+        
+        #view-catgories:hover {
             background-color: #f5f0ed;
         }
     </style>
@@ -114,8 +147,7 @@
         <p class="slogan">Fresh Finds, One Click Away.</p>
     </div>
 
-    <div class="center-form">
-        <h1 class="text-center">Add a Category</h1>
+    <div class="center-box">
         {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
         <div class="flash-messages">
             {% for category, message in messages %} {% if 'Danger' in category %}
@@ -129,24 +161,19 @@
             {% endif %} {% endfor %}
         </div>
         {% endif %} {% endwith %}
-        <form method="post" action="/category/create">
-            <div class="form-group">
-                <label for="cat_name">Enter the Category Name:</label>
-                <input name="cat_name" type="text" class="form-control" id="cat_name" required />
-            </div>
-            <div class="form-group">
-                <label for="cat_des">Enter a short description of Category (optional):</label>
-                <input name="cat_des" type="text" class="form-control" id="cat_des" />
-            </div>
+        <h2 class="text-center mb-4">Are you sure you want to delete this category?</h2>
+        <form action="/category/delete/{{ category_id }}" method="post" class="mb-3">
             <div class="text-center">
-                <input type="submit" value="Add Category" class="btn btn-primary" />
+                <input type="submit" value="Yes, Delete" class="btn btn-outline-danger">
             </div>
         </form>
     </div>
+
     <div class="footer-banner">
         <a class="footer-text" href="mailto:21f1001719@ds.study.iitm.ac.in">Email: 21f1001719@ds.study.iitm.ac.in</a>
     </div>
     <a href="/landing_admin" id="landing-admin">Home</a>
+    <a href="/categories" id="view-catgories">Categories</a>
 </body>
 
 </html>
