--- a/templates/view_categories_admin.html
+++ b/templates/view_categories_admin.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Category</title>
+    <title>Categories - Admin Access</title>
     <link href="/static/bootstrap.min.css" rel="stylesheet">
+
     <style>
         .header-banner {
             background-color: #6DBE45;
@@ -83,12 +84,20 @@
             font-weight: 500;
         }
         
-        .alert-Cat_Create_Danger_Integirty_Error,
-        .alert-Cat_Create_Danger_Statement_Error,
-        .alert-Cat_Create_Danger_Invalid_Request_Error,
-        .alert-Unauthorized_Create_Category_Access {
+        .alert-Unauthorized_View_Category_Access {
             background-color: #f44336;
             color: white;
+        }
+        
+        .center-table {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgba(255, 255, 255, 0.9);
+            padding: 20px;
+            border-radius: 10px;
+            width: 70%;
         }
         
         #landing-admin {
@@ -114,8 +123,7 @@
         <p class="slogan">Fresh Finds, One Click Away.</p>
     </div>
 
-    <div class="center-form">
-        <h1 class="text-center">Add a Category</h1>
+    <div class="center-table">
         {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %}
         <div class="flash-messages">
             {% for category, message in messages %} {% if 'Danger' in category %}
@@ -129,19 +137,30 @@
             {% endif %} {% endfor %}
         </div>
         {% endif %} {% endwith %}
-        <form method="post" action="/category/create">
-            <div class="form-group">
-                <label for="cat_name">Enter the Category Name:</label>
-                <input name="cat_name" type="text" class="form-control" id="cat_name" required />
-            </div>
-            <div class="form-group">
-                <label for="cat_des">Enter a short description of Category (optional):</label>
-                <input name="cat_des" type="text" class="form-control" id="cat_des" />
-            </div>
-            <div class="text-center">
-                <input type="submit" value="Add Category" class="btn btn-primary" />
-            </div>
-        </form>
+        <h2 class="text-center">List of All Categories Registered</h2>
+
+        <table class="table table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th> S.No</th>
+                    <th> Name</th>
+                    <th> Description</th>
+                    <th> Edit</th>
+                    <th> Delete</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for one in all %}
+                <tr>
+                    <td>{{one['category_id']}}</td>
+                    <td>{{one['category_name']}}</td>
+                    <td>{{one['category_des']}}</td>
+                    <td><a button oneclick='edit()' href="/category/edit/{{ one['category_id'] }}">Edit</a></td>
+                    <td><a href="/category/confirm-delete/{{ one['category_id'] }}">Delete</a></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
     <div class="footer-banner">
         <a class="footer-text" href="mailto:21f1001719@ds.study.iitm.ac.in">Email: 21f1001719@ds.study.iitm.ac.in</a>
